# plutus-nix

./: CHANGELOG.md  GOVERNANCE.md  MAINTAINERS.md  README.md  SUPPORT.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/workflows/: ci.yml
.github/workflows/: ci.yml
code/: cabal.project
code/workspace/lecture/: Demo.hs
code/wspace/: amm-validator.plutus  circle.cbor  circle.plutus  energy_validator.plutus  snapshot_validator.plutus  vault-validator.plutus  wspace.cabal  yieldsharing.cbor  yieldsharing.plutus
code/wspace-Saviour/: wspace.cabal
code/wspace-Saviour/lecture/archive/: temp.hs
code/wspace-Saviour/tests/: Trustless-Esusu.hs
code/wspace/Ebu/: PublicFund.md
code/wspace/Ebu/Offchain/: Emulator.hs
code/wspace/Ebu/Onchain/: Escrow-Validator.hs  EscrowValidator.hs  PublicFund.hs
code/wspace/assets/: CHANGELOG.md  lock-by-deadline.plutus  minted-tokens.plutus  parameterized-vesting.plutus  template-param.plutus  vesting.plutus
code/wspace/lecture/: CGPlutusUtils.hs  CGPlutusUtilsv1.hs  CGTime.hs  Demo.hs  Donation.hs  Escrow.hs  Mint.hs  ParameterizedVesting.hs  REPLTutorial.md  Tutorial-CGPlutusUtilsSpec.md  Tutorial-CGPlutusUtilsv1.md  Tutorial-CGTime.md  Tutorial-CGTimeSpec.md  Tutorial-ParameterizedVesting.md  Tutorial-ParamterizedVestingSpec.md  Tutorial-Vesting.md  Tutorial-VestingSpec.md  Vesting.hs  index.html
code/wspace/lecture/boilerPlate/: coxy-plutus-playground.html  coxypp.js  factory.html
code/wspace/tests/: Amm.hs  CGPlutusUtilsSpec.hs  CGTimeSpec.hs  Collaterized-Stablecoin.hs  DemoSpec.hs  DonationSpec.hs  Energyp2p.hs  Escrow.hs  EscrowSpec.hs  Esusu.hs  Ip.hs  Lending-Vault.hs  Limit-Order.hs  Main.hs  MintSpec.hs  Rebase-Token-Policy.hs  Snapshot.hs  Spec.hs  Synthetic-Assets.hs  VestingSpec.hs  Yield-Sharing.hs
coxy-plutus-builder/: coxy-plutus.js  index.html
plutus-starter-kit/src/: ValidatorLogic.hs  src.cabal
plutus-starter-kit/src/tests/: Main.hs  Spec.hs
