cabal-version:      3.4
name:               wspace
version:            0.1.0.0
author:             IOG's education team, Bernard Sibanda
maintainer:         education@iohk.io, cto@wims.io
license:            Apache-2.0
build-type:         Simple

common common-all
    build-depends:
        base ^>=4.14.3.0,
        aeson,
        bytestring,
        containers,
        cardano-api,
        data-default,
        plutus-ledger-api,
        cardano-ledger-core,
        plutus-tx-plugin,
        plutus-tx,
        base16-bytestring,
        text,
        serialise,
        utilities,
        cardano-ledger-shelley,
        bech32 >=1.1 && <2.0,
        time
    default-language: Haskell2010
    ghc-options:
        -Wno-unused-packages
        -fobject-code
        -fno-ignore-interface-pragmas
        -fno-omit-interface-pragmas
        -fno-strictness
        -fno-spec-constr
        -fno-specialise
        -fexpose-all-unfoldings
        -fplugin-opt PlutusTx.Plugin:defer-errors

common common-all-tests
    import:           common-all
    build-depends:
      QuickCheck,
      tasty,
      tasty-hunit,
      bytestring,
      base16-bytestring,
      plutus-simple-model,
      plutus-ledger-api
    default-language: Haskell2010

library 
    import:            common-all
    hs-source-dirs:    lecture
    exposed-modules:
      CGPlutusUtilsv1
      CGTime
      Demo
      Mint
      ParameterizedVesting
      Vesting
      SimpleValidator
    build-depends:
      base >=4.14 && <5,      
      time,
      bytestring
    default-language: Haskell2010

executable escrow-exe
    main-is:            Escrow.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        bytestring,
        serialise,
        text,
        containers,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley
    default-language:   Haskell2010

executable milestone-escrow-exe
    main-is:            Milestone-Escrow.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        bytestring,
        serialise,
        text,
        containers,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley
    default-language:   Haskell2010

executable synthetic-assets-exe
    main-is:            Synthetic-Assets.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        bytestring,
        serialise,
        text,
        containers,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley
    default-language:   Haskell2010

executable pooled-lending-exe
    main-is:            Pooled-Lending.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        bytestring,
        serialise,
        text,
        containers,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley
    default-language:   Haskell2010

executable credit-line-exe
    main-is:            Credit-Line.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        bytestring,
        serialise,
        text,
        containers,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley
    default-language:   Haskell2010

executable lending-vault-exe
    main-is:            Lending-Vault.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        bytestring,
        serialise,
        text,
        containers,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley
    default-language:   Haskell2010

executable liquidation-auction-exe
    main-is:            Liquidation-Auction.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        bytestring,
        serialise,
        text,
        containers,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley
    default-language:   Haskell2010

executable collaterized-stablecoin-exe
    main-is:            Collaterized-Stablecoin.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        bytestring,
        serialise,
        text,
        containers,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley
    default-language:   Haskell2010

executable ip-exe
    main-is:            Ip.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        bytestring,
        serialise,
        text,
        containers,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley
    default-language:   Haskell2010
test-suite wspace-tests
    import:              common-all-tests
    type:                exitcode-stdio-1.0
    hs-source-dirs:      tests
    main-is:             Spec.hs
    build-depends:
      wspace,
      utilities
    other-modules:
      CGPlutusUtilsSpec
      CGTimeSpec
      ParameterizedVestingSpec
      VestingSpec
      DemoSpec
    default-language:    Haskell2010